Fixed the text (h2) overlap

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -45,7 +45,7 @@ p {
   font-weight: normal;
   font-size: 24px;
   color: #272142;
-  line-height: 1.5px;
+  line-height: 1.5;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -70,12 +70,13 @@ p {
 .project-description {
   padding: 120px 60px;
 }
-@media (max-width: 960px) {
+@media (max-width: 900px) {
   h1 {
-    font-size: 52px;
+    font-size: 44px;
+    line-height: 2;
   }
   h2 {
-    font-size: 44px;
+    font-size: 30px;
   }
   .hero {
     padding: 80px 20px;
